# HQEngine

./: .gitignore  COPYING.txt  README.md
HQEngine/: CMakeLists.txt
HQEngine/Source/: CMakeLists.txt  HQ2DMath.h  HQ2DMathInline.h  HQ3DMath.h  HQ3DMathBasics.h  HQ3DMathInline.h  HQAssert.h  HQAtomic.h  HQAtomicGCC.h  HQAtomicWin32.h  HQAudio.h  HQBoundingVolume.h  HQCamera.h  HQClosedHashTable.h  HQClosedStringHashTable.h  HQConditionVariable.h  HQDXMatrixInline.h  HQDXQuaternionInline.h  HQDataStream.h  HQDefaultHashFunction.h  HQDefaultKeyEqual.h  HQEngineApp.h  HQEngineAppDelegate.h  HQEngineCommon.h  HQEngineCustomHeap.h  HQEngineEffectManager.h  HQEngineResManager.h  HQFileManager.h  HQGrowableArray.h  HQHashTable.h  HQItemManager.h  HQKeyCode.h  HQLinkedList.h  HQLogStream.h  HQLoggableObject.h  HQMemAlignment.h  HQMemoryManager.h  HQMeshNode.h  HQMiscDataType.h  HQMutex.h  (+35 more)
HQEngine/Source/HQEngine/: CMakeLists.txt  HQBufferedDataStream.h  HQDefaultDataStream.h  HQDefaultFileManager.cpp  HQDefaultFileManager.h  HQEngine.aps  HQEngine.rc  HQEngine.vcproj  HQEngine.vcxproj  HQEngine.vcxproj.filters  HQEngineApp.cpp  HQEngineBaseWindow.cpp  HQEngineCommonInternal.cpp  HQEngineCommonInternal.h  HQEngineEffectManagerImpl.cpp  HQEngineEffectManagerImpl.h  HQEnginePCH.cpp  HQEnginePCH.h  HQEngineResManagerImpl.cpp  HQEngineResManagerImpl.h  HQEngineResParserCommon.cpp  HQEngineResParserCommon.h  HQEngineWindow.h  HQEventSeparateThread.cpp  HQEventSeparateThread.h  ReadMe.txt  bison_win32.bat  effect_script_parser.y  effect_script_tokens.l  gen_effect_script_parser.cpp  gen_effect_script_parser.hpp  gen_effect_script_tokens.cpp  gen_res_script_parser.cpp  gen_res_script_parser.hpp  gen_res_script_tokens.cpp  generate_parsers.sh  res_script_parser.y  res_script_tokens.l  resource.h  targetver.h
HQEngine/Source/HQEngine/android/: HQAndroidGameThread.cpp  HQEngineAppAndroid.cpp  HQEngineJNI.cpp  HQEngineWindowAndroid.cpp
HQEngine/Source/HQEngine/apple/: HQEngineAppOSX.mm  HQEngineWindowOSX.mm
HQEngine/Source/HQEngine/ios/: HQEngineAppIOS.mm  HQEngineWindowIOS.mm  HQIOSAppDelegate.mm  HQIOSGameThread.cpp
HQEngine/Source/HQEngine/win32/: HQEngineAppWin32.cpp  HQEngineWindowWin32.cpp  dllmain.cpp
HQEngine/Source/HQEngine/winstore/: HQEngineAppWinStore.cpp  HQEngineWindowWinStore.cpp  HQWinStoreFileSystem.cpp  HQWinStoreFileSystem.h  HQWinStoreUtil.cpp  HQWinStoreUtil.h
HQEngine/Source/HQEngine/x11/: HQEngineAppX11.cpp  HQEngineWindowX11.cpp
HQEngine/Source/HQRendererGL/: Android.cpp  Android.h  AndroidGLES.cpp  AndroidGLES.h  Apple.h  Apple.mm  CMakeLists.txt  ClassDiagram1.cd  HQCommonGL.cpp  HQCommonGL.h  HQCommonVertexStreamManGL.h  HQCommonVertexStreamManGL_inline.h  HQDeviceEnumGL.cpp  HQDeviceEnumGL.h  HQDeviceGL.cpp  HQDeviceGL.h  HQDeviceGLPCH.cpp  HQDeviceGLPCH.h  HQDeviceGL_caps.cpp  HQEngineRendererGL.cbp  HQEngineRendererGL.depend  HQEngineRendererGL.layout  HQFFEmuShaderControllerGL.cpp  HQFFShaderControllerGL.cpp  HQFixedFunctionShaderManagerGL.cpp  HQFixedFunctionShaderManagerGL.h  HQRenderTargetFBO.cpp  HQRenderTargetGL.h  HQRendererGL.aps  HQRendererGL.rc  HQRendererGL.vcproj  HQRendererGL.vcxproj  HQRendererGL.vcxproj.filters  HQRendererGLDef.def  HQShaderGL.cpp  HQShaderGL.h  HQShaderGL_CgController.cpp  HQShaderGL_CgController.h  HQShaderGL_CgController_inline.h  HQShaderGL_CombineController.cpp  (+30 more)
HQEngine/Source/HQRendererGL/glew-1.6.0/src/: glew.c
HQEngine/Source/HQRendererGL/glew/include/GL/: glew.h
HQEngine/Source/HQRendererGL/glew/src/: glew.c
HQEngine/Source/HQUtilMath/: CMakeLists.txt  HQAABB.cpp  HQBSP.cpp  HQMatrix3x4.cpp  HQMatrix4.cpp  HQOBB.cpp  HQPlane.cpp  HQPolygon.cpp  HQPrimeNumber.cpp  HQQuaternion.cpp  HQRay.cpp  HQSphere.cpp  HQUtilMath.vcproj  HQUtilMath.vcxproj  HQUtilMath.vcxproj.filters  HQUtilMathPCH.cpp  HQUtilMathPCH.h  HQVector.cpp  Q_Util.aps  Q_Util.cbp  Q_Util.depend  Q_Util.layout  Q_Util.rc  ReadMe.txt  dllmain.cpp  targetver.h
HQEngine/Source/HQUtilMath/arm_neon_math/: HQNeonMathASM.cpp  HQNeonMatrix.h  HQNeonMatrix.s  HQNeonQuaternion.h  HQNeonQuaternion.s  HQNeonVector.h  HQNeonVector.s
HQEngine/Source/HQUtilMath/directx_math/: HQDXMatrix.h  HQDXQuaternion.h  HQDXVector.h
HQEngine/VS/: HQEngine.sln  HQEngineUtilMath.sln
HQEngine/VS2008/: HQEngine.sln  setLibPathEnv.bat
HQEngine/doc/: effect_script.txt  resource_script.txt  special_keywords_in_shaders.txt  uniform_block_emu.txt  xml_effect_script.txt  xml_resource_script.txt
HQEngine/linux/: CMakeLists.txt  initDeps-not-requireALSA.sh  initDeps.sh  initProject-Debug.sh  initProject.sh
HQEngine/linux/cmake/Modules/: FindX11_randr.cmake  FindX11_xinput2.cmake  FindXfree86_video_mode.cmake
HQShaderCompiler/VS2008/: all_projects.sln
ThirdParty-mod/mojoshader/: mojoshader.cpp  mojoshader_preprocessor.cpp
ThirdParty-mod/openal-soft/: CMakeLists.txt
ThirdParty-mod/tinyxml/: tinyxml.cpp
libogg/xcode/: ._build
libvorbis/macosx/: ._build
samples/BaseSource/: BaeApp.cpp  BaseApp.h  BaseCommon.h  GpuProfiler.cpp  GpuProfiler.h  GpuProfilerD3D11.cpp  GpuProfilerD3D11.h  Light.cpp  Light.h  Utils.cpp  Utils.h
samples/Data/: common_compute_code.h  common_shader_code.h  compile_cg_2_glsl.bat  compile_cg_2_hlsl.bat  compile_cg_2_hlsl_glsl.bat  compile_hlsl11_2_glsl430.bat  compile_hlsl11_2_glsl430_debug.bat  compile_hlsl11bytecode_2_glsl430.bat  cornell_box.hqmesh  cornell_box_spheres.hqmesh
samples/multires_splatting/: README.txt
tinyxml/: tinyxml.h
tools/ConvertToHQEngineMeshFile/: bat.hqmesh
tools/HQEngineDeployDll/: Form1.Designer.cs  Form1.cs  HQEngineDeployDll.csproj  Program.cs
tools/HQRendererSettingEditor/: HQRendererSettingEditor.vcproj
tools/HQSpritesEditor/: HQSpritesEditor.vcproj
utilities/ConvertToHQEngineMeshFile/: AllocMeshX.cpp  AllocMeshX.h  AssimpConverter.cpp  ConvertToHQEngineMeshFile.vcproj  XConverter.cpp  bunny.mtl  cornell_box.hqmesh  cornell_box.mtl  cornell_box_low_water_uv.mtl  cornell_box_low_water_uv_rough_roof.mtl  cornell_box_occluded_thick_ring_2.mtl  cornell_box_thick_ring_2.mtl  main.cpp  main.h  tower4.x  (+2 more)
(+1850 files in other folders)
